<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
   android:orientation="vertical"
    android:background="@color/white"
    android:layout_height="150dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/alegreya_sans"
            android:layout_height="wrap_content"
            android:text="@string/addTotaldis"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="17sp"

            android:textStyle="bold" />
        <ImageView
            android:id="@+id/cancelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="6"
            android:background="@drawable/ic_baseline_clear_24"

            />



    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="2dp"
        android:layout_weight="3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/app_disc_value2"
            android:padding="3dp"
            android:fontFamily="@font/alegreya_sans"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/discEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
android:padding="2dp"
            android:textSize="16sp"
            android:layout_weight="1"

            android:background="@drawable/edittext_back"
            android:inputType="numberDecimal"
            android:textColor="@color/black" />

    <RadioGroup
        android:id="@+id/discTypeRadioGroup"
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        android:layout_marginLeft="2dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/discValueRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"

            android:text="@string/app_disc_type1"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/discPercRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:checked="true"
            android:layout_marginLeft="7dp"
            android:text="@string/app_disc_type2"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp" />


    </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_columnSpan="2"
        android:layout_marginTop="10dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="3dp">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/okButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="7dp"
        android:background="@drawable/rec_gradient"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>