<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"

        app:cardElevation="5dp"
        android:layout_marginBottom="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:gravity="center"
            android:layout_marginVertical="12dp"
            android:layout_marginHorizontal="20dp">

            <Spinner
                android:id="@+id/categorySpinner"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:layout_marginEnd="3dp"
                />

            <Spinner
                android:id="@+id/kindSpinner"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:layout_marginStart="3dp"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/getListCom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="5">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_container2"
                android:drawableStart="@drawable/ic_baseline_search_24"
                android:hint="@string/search"
                android:drawableTint="@color/gray_btn_bg_color"
                android:textColor="@color/black"
                android:selectAllOnFocus="true"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:textColorHint="@color/gray_btn_bg_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingEnd="28dp"
                />

                <ImageButton
                    android:id="@+id/clear_text"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_baseline_clear_24"
                    app:layout_constraintEnd_toEndOf="@+id/search"
                    app:layout_constraintTop_toTopOf="@id/search"
                    app:layout_constraintBottom_toBottomOf="@+id/search"
                    android:layout_marginEnd="3dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/headerComp2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"

                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/back_edit"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="2dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center"

                    android:textStyle="bold"
                    android:visibility="visible" />

            </LinearLayout>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:background="@drawable/edittext_white_border"
                android:padding="1dp">
                <TextView
                    android:text="@string/item_Name_"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:elevation="2dp"

                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp"
                    android:gravity="center"
                    />
                <TextView
                    android:text="@string/item_price"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:elevation="2dp"
                    android:paddingStart="25dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp"
                    android:gravity="start"
                    />
                <TextView
                    android:text="@string/item_Qty"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:elevation="2dp"
                    android:paddingStart="25dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp"
                    android:gravity="start"
                    />
            </TableRow>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/Rec"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollingCache="true"
                    android:smoothScrollbar="true" />

            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>